# yacuc

./: .env_example  .gitignore  README.md  ch_setup.sql  docker-compose.yml  generate_data.py  lttb.sql  main.py  pg_setup.sql  pyproject.toml
site/: plots.html
src/api/: pages.py  plots.py
src/core/: asgi.py  create_app.py  enums.py  misc.py  settings.py
src/entities/: plot.py
src/schemas/: plot.py
src/services/: clickhouse.py  get_plots.py  postgresql.py
