[tool.poetry]
name = "yacuc"
version = "0.1.0"
description = ""
authors = ["Rustam Afanasev <rustam.afanasev@tetrika.school>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clickhouse-connect = "0.7.1"
pydantic = "2.6.3"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
websockets = "^12.0"
pandas = "^2.2.1"
pydantic-settings = "^2.2.1"
aiofiles = "^23.2.1"
uvicorn = "^0.28.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}



[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
